Minor nav fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="profile-photo">
                         <img src="./images/profile-1.jpg" alt="">
                     </div>
-                    <h5>Chu Hua</h5>
+                    <h5>Dev Ivan</h5>
                     <span class="material-symbols-sharp">expand_more</span>
                 </div>
                 <button id="menu-btn">
