--- a/index.html
+++ b/index.html
@@ -47,8 +47,336 @@
     </nav>
     <!-- END OF NAVBAR -->
 
-</body>
+    <main>
+        <aside>
+            <button id="close-btn">
+                <span class="material-symbols-sharp">
+                    close
+                    </span>
+            </button>
 
-</html>
+            <div class="sidebar">
+                <a href="#" class="active">
+                    <span class="material-symbols-sharp">
+                        dashboard
+                        </span>
+                    <h4>Dashboard</h4>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">
+                        currency_exchange
+                        </span>
+                    <h4>Exchange</h4>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">
+                        account_balance_wallet
+                        </span>
+                    <h4>Wallet</h4>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">
+                        payment
+                        </span>
+                    <h4>Transactions</h4>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">
+                        pie_chart
+                        </span>
+                    <h4>Analytics</h4>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">
+                        message
+                        </span>
+                    <h4>Messages</h4>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">
+                        help_center
+                        </span>
+                    <h4>Help Center</h4>
+                </a>
+                <a href="#">
+                    <span class="material-symbols-sharp">
+                        settings
+                        </span>
+                    <h4>Settings</h4>
+                </a>
+
+
+            </div>
+            <!-- END OF SIDEBAR -->
+            <div class="updates">
+                <span class="material-symbols-sharp">
+                    update
+                    </span>
+                <h4>Updates Available</h4>
+                <p>Security Updates</p>
+                <p>General updates</p>
+                <a href="#">Update Now</a>
+
+            </div>
+        </aside>
+        <!-- ************************************END OF ASIDE***************************** -->
+
+        <section class="middle">
+            <div class="header">
+                <h1>Overview</h1>
+                <input type="date" name="" id="">
+            </div>
+
+            <div class="cards">
+                <div class="card">
+                    <div class="top">
+                        <div class="left">
+                            <img src="./images/BTC.png" alt="">
+                            <h2>BTC</h2>
+                        </div>
+
+                        <img src="./images/visa.png" alt="" class="right">
+
+                    </div>
+
+                    <div class="middle">
+                        <h1>$827,199</h1>
+                        <div class="chip">
+                            <img src="./images/card chip.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="bottom">
+                        <div class="left">
+                            <small>Card Holder</small>
+                            <h5>JOHN DOE</h5>
+                        </div>
+                        <div class="right">
+                            <div class="expiry">
+                                <small>Expiry</small>
+                                <h5>08/23</h5>
+                            </div>
+                            <div class="cvv">
+                                <small>CVV</small>
+                                <h5>123</h5>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- END OF CARD 1 -->
+
+                <div class="card">
+                    <div class="top">
+                        <div class="left">
+                            <img src="./images/ETH.png" alt="">
+                            <h2>ETH</h2>
+                        </div>
+                        <img src="./images/master card.png" alt="" class="right">
+
+                    </div>
+                    <div class="middle">
+                        <h1>$95,623</h1>
+                        <div class="chip">
+                            <img src="./images/card chip.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="bottom">
+                        <div class="left">
+                            <small>Card Holder</small>
+                            <h5>JOHN DOE</h5>
+                        </div>
+                        <div class="right">
+                            <div class="expiry">
+                                <small>Expiry</small>
+                                <h5>08/23</h5>
+                            </div>
+                            <div class="cvv">
+                                <small>CVV</small>
+                                <h5>123</h5>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <!-- END OF CARD 2 -->
+                <div class="card">
+                    <div class="top">
+                        <div class="left">
+                            <img src="./images/BTC.png" alt="">
+                            <h2>BTC</h2>
+                        </div>
+                        <img src="./images/visa.png" alt="" class="right">
+
+                    </div>
+                    <div class="middle">
+                        <h1>$74,389</h1>
+                        <div class="chip">
+                            <img src="./images/card chip.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="bottom">
+                        <div class="left">
+                            <small>Card Holder</small>
+                            <h5>JOHN DOE</h5>
+                        </div>
+                        <div class="right">
+                            <div class="expiry">
+                                <small>Expiry</small>
+                                <h5>08/24</h5>
+                            </div>
+                            <div class="cvv">
+                                <small>CVV</small>
+                                <h5>123</h5>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <!-- END OF CARD 3 -->
+            </div>
+            <!-- END OF CARDS -->
+            <div class="monthly-report">
+                <div class="report">
+                    <h3>Income</h3>
+                    <div>
+                        <details>
+                            <h1>$29,023</h1>
+                            <h6 class="success">+3.5%</h6>
+                        </details>
+                        <p class="text-muted">Compared to $26,938 last month</p>
+                    </div>
+                </div>
+
+                <!-- END OF INCOME REPORT -->
+                <div class="report">
+                    <h3>Expenses</h3>
+                    <div>
+                        <details>
+                            <h1>$9,095</h1>
+                            <h6 class="danger">-6.5%</h6>
+                        </details>
+                        <p class="text-muted">Compared to $11,912 last month</p>
+                    </div>
+                </div>
+                <!-- END OF EXPENSE REPORT -->
+
+                <div class="report">
+                    <h3>Cashback</h3>
+                    <div>
+                        <details>
+                            <h1>$9,004</h1>
+                            <h6 class="success">+7.5%</h6>
+                        </details>
+                        <p class="text-muted">Compared to $3,028 last month</p>
+                    </div>
+                </div>
+                <!-- END OF CASHBACK REPORT -->
+
+                <div class="report">
+                    <h3>Turnover</h3>
+                    <div>
+                        <details>
+                            <h1>$118,224</h1>
+                            <h6 class="danger">-17.8%</h6>
+                        </details>
+                        <p class="text-muted">Compared to $141,938 last month</p>
+                    </div>
+                </div>
+                <!-- END OF TURN OVER REPORT -->
+
+            </div>
+
+            <!-- END OF MONTHLY REPORT -->
+            <div class="fast-payment">
+                <h2>Fast Payment</h2>
+                <div class="badges">
+                    <div class="badge">
+                        <span class="material-symbols-sharp">
+                            add
+                            </span>
+                    </div>
+
+                    <div class="badge">
+                        <span class="bg-primary"></span>
+                        <div>
+                            <h5>Training</h5>
+                            <h4>$50</h4>
+                        </div>
+                    </div>
+
+                    <div class="badge">
+                        <span class="bg-success"></span>
+                        <div>
+                            <h5>Internet</h5>
+                            <h4>$40</h4>
+                        </div>
+                    </div>
+
+                    <div class="badge">
+                        <span class="bg-primary"></span>
+                        <div>
+                            <h5>Gas</h5>
+                            <h4>$190</h4>
+                        </div>
+                    </div>
+
+                    <div class="badge">
+                        <span class="bg-primary"></span>
+                        <div>
+                            <h5>Movies</h5>
+                            <h4>$35</h4>
+                        </div>
+                    </div>
+
+                    <div class="badge">
+                        <span class="bg-primary"></span>
+                        <div>
+                            <h5>Education</h5>
+                            <h4>$999</h4>
+                        </div>
+                    </div>
+
+                    <div class="badge">
+                        <span class="bg-danger"></span>
+                        <div>
+                            <h5>Electricity</h5>
+                            <h4>$109</h4>
+                        </div>
+                    </div>
+
+                    <div class="badge">
+                        <span class="bg-success"></span>
+                        <div>
+                            <h5>Food</h5>
+                            <h4>$399</h4>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            </div>
+            <!-- END OF FAST PAYMENT -->
+
+            <canvas id="chart">
+
+            </canvas>
+
+        </section>
+        <!-- END OF MIDDLE  -->
+
+        <section class="right">
+
+        </section>
+        <!-- END OF RIGHT  -->
+    </main>
+    <!-- ***************END OF ASIDE********** -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js" integrity="sha512-ElRFoEQdI5Ht6kZvyzXhYG9NqjtkmlkfYk0wr6wHxU9JEHakS7UJZNeml5ALk+8IKlU6jDgMabC3vkumRokgJA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./main.js"></script>
+</body>
 
 </html>
