Finally completed the design, it wasn't easy

--- a/index.html
+++ b/index.html
@@ -361,14 +361,218 @@
             </div>
             <!-- END OF FAST PAYMENT -->
 
-            <canvas id="chart">
-
-            </canvas>
+            <canvas id="chart"></canvas>
 
         </section>
         <!-- END OF MIDDLE  -->
 
         <section class="right">
+            <div class="investments">
+                <div class="header">
+                    <h2>Investments</h2>
+                    <a href="#">More <span class="material-symbols-sharp">chevron_right</span></a>
+                </div>
+
+                <div class="investment">
+                    <img src="./images/uniliver.png" alt="">
+                    <h4>Unilever</h4>
+                    <div class="date-time">
+                        <p>7 Nov, 2021</p>
+                        <small class="text-muted">9.14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$20,033</h4>
+                        <small class="danger">-4.27%</small>
+                    </div>
+                </div>
+                <!-- END OF INVESTMENT 1-->
+                <div class="investment">
+                    <img src="./images/tesla.png" alt="">
+                    <h4>Tesla</h4>
+                    <div class="date-time">
+                        <p>7 Nov, 2021</p>
+                        <small class="text-muted">9.14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$20,033</h4>
+                        <small class="success">+36.27%</small>
+                    </div>
+                </div>
+                <!-- END OF INVESTMENT 2-->
+                <div class="investment">
+                    <img src="./images/monster.png" alt="">
+                    <h4>Monster</h4>
+                    <div class="date-time">
+                        <p>7 Nov, 2021</p>
+                        <small class="text-muted">9.14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$20,033</h4>
+                        <small class="danger">+6.27%</small>
+                    </div>
+                </div>
+                <!-- END OF INVESTMENT 3-->
+                <div class="investment">
+                    <img src="./images/mcdonalds.png" alt="">
+                    <h4>McDonalds</h4>
+                    <div class="date-time">
+                        <p>7 Nov, 2021</p>
+                        <small class="text-muted">9.14pm</small>
+                    </div>
+                    <div class="bonds">
+                        <p>1402</p>
+                        <small class="text-muted">Bonds</small>
+                    </div>
+                    <div class="amount">
+                        <h4>$20,033</h4>
+                        <small class="danger">-4.27%</small>
+                    </div>
+                </div>
+                <!-- END OF INVESTMENT 4-->
+            </div>
+            <!--============== END OF INVESTMENTS=================  -->
+
+            <div class="recent-transactions">
+                <div class="header">
+                    <h2>Recent Transactions</h2>
+                    <a href="#">More <span class="material-symbols-sharp">
+                        chevron_right
+                        </span></a>
+                </div>
+
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-purple-light">
+                            <span class="material-symbols-sharp purple">headset_mic</span>
+                        </div>
+                        <div class="details">
+                            <h4>Music</h4>
+                            <p>20.11.2021</p>
+                        </div>
+                    </div>
+
+                    <div class="card-details">
+                        <div class="card bg-danger">
+                            <img src="./images/visa.png" alt="">
+                        </div>
+                        <div class="details">
+                            <p>*2757</p>
+                            <small class="text-muted">Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>$20</h4>
+                </div>
+                <!-- END OF TRANSACTION -->
+
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-purple-light">
+                            <span class="material-symbols-sharp purple">shopping_bag</span>
+                        </div>
+                        <div class="details">
+                            <h4>Shopping</h4>
+                            <p>19.11.2021</p>
+                        </div>
+                    </div>
+
+                    <div class="card-details">
+                        <div class="card bg-primary">
+                            <img src="./images/visa.png" alt="">
+                        </div>
+                        <div class="details">
+                            <p>*2757</p>
+                            <small class="text-muted">Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$799</h4>
+                </div>
+                <!-- END OF TRANSACTION -->
+
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-success-light">
+                            <span class="material-symbols-sharp purple">restaurant</span>
+                        </div>
+                        <div class="details">
+                            <h4>Restaurant</h4>
+                            <p>19.11.2021</p>
+                        </div>
+                    </div>
+
+                    <div class="card-details">
+                        <div class="card bg-dark">
+                            <img src="./images/master card.png" alt="">
+                        </div>
+                        <div class="details">
+                            <p>*8273</p>
+                            <small class="text-muted">Master Card</small>
+                        </div>
+                    </div>
+                    <h4>-$50</h4>
+                </div>
+                <!-- END OF TRANSACTION -->
+
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-danger-light">
+                            <span class="material-symbols-sharp danger">sports_esports</span>
+                        </div>
+                        <div class="details">
+                            <h4>Games</h4>
+                            <p>15.11.2021</p>
+                        </div>
+                    </div>
+
+                    <div class="card-details">
+                        <div class="card bg-danger">
+                            <img src="./images/visa.png" alt="">
+                        </div>
+                        <div class="details">
+                            <p>*2757</p>
+                            <small class="text-muted">Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$44</h4>
+                </div>
+                <!-- END OF TRANSACTION -->
+
+                <div class="transaction">
+                    <div class="service">
+                        <div class="icon bg-danger-light">
+                            <span class="material-symbols-sharp danger">medication</span>
+                        </div>
+                        <div class="details">
+                            <h4>Pharmacy</h4>
+                            <p>15.11.2021</p>
+                        </div>
+                    </div>
+
+                    <div class="card-details">
+                        <div class="card bg-danger">
+                            <img src="./images/visa.png" alt="">
+                        </div>
+                        <div class="details">
+                            <p>*1928</p>
+                            <small class="text-muted">Credit Card</small>
+                        </div>
+                    </div>
+                    <h4>-$30</h4>
+                </div>
+                <!-- END OF TRANSACTION -->
+            </div>
+            <!--=================== END OF RECENT TRANSACTIONS ================-->
 
         </section>
         <!-- END OF RIGHT  -->
